[package]
name = "learn-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.60"
rand = "0.8.5"
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]
